--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)"
   ],
   "scripts": {
-    "test": "node ./node_modules/grunt-cli/bin/grunt test"
+    "test": "grunt test"
   }
 }
