--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "lodash-contrib",
   "description": "The brass buckles on lodash's utility belt",
-  "version": "241.4.8",
+  "version": "241.4.9",
   "main": "index.js",
   "dependencies": {
     "lodash": "2.4.1"
   },
   "devDependencies": {
+    "browserify": "^4.1.8",
     "grunt": "",
+    "grunt-browserify": "^2.1.0",
     "grunt-cli": "",
     "grunt-contrib-concat": "",
     "grunt-contrib-jshint": "",
