Run grunt to create files in dist + publish via travis

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lodash-contrib",
   "description": "The brass buckles on lodash's utility belt",
-  "version": "241.4.12",
+  "version": "241.4.13",
   "main": "lodash-contrib.js",
   "dependencies": {
     "lodash": "2.4.1"
@@ -29,6 +29,7 @@
   ],
   "scripts": {
     "test": "grunt test",
-    "dist": "grunt dist"
+    "dist": "grunt dist",
+    "mypublish": "npm run dist && npm version patch && git push --follow-tags"
   }
 }
