--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
 language: node_js
-
 node_js:
-  - "0.10"
+- "0.11"
+- "0.10"
+
+notifications:
+  slack: empeeric:Hsm2xE5SNniMiUAEgM0Ngcnb
+
+deploy:
+  provider: npm
+  email: refael@empeeric.com
+  api_key:
+    secure: Tb4amuc/AVifAsiuRAy1aBibfOnZ5WiC+Jbx9i7k/IzpYbou1zDLejlvFOYYegeDY099zs1vrS2wkcBgkLYcTVY7FneIQgIBrVaP2RQC27X4XgnqtYiNXJmsMwT2/gmah/+2Ix7Yf/v1n6Cyufe5VuX0yN+jPtrygcH30+iaUvg=
+  on:
+    all_branches: true
+    tags: true
+    node: "0.10"
+    repo: TheNodeIls/lodash-contrib
