--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": "TheNodeILs/lodash-contrib",
   "license": "MIT",
-  "author": "Refael Ackermann <refael@empeeric.com> (http://www.empeeric.com)",
+  "author": "Refael Ackermann <me@refack.com> (http://refack.com)",
   "contributors": [
     "Fogus <me@fogus.me> (http://www.fogus.me)",
     "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)"
