--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lodash": "3.10.0"
   },
   "devDependencies": {
-    "chai": "^1.9.2",
+    "chai": "",
     "grunt": "",
     "grunt-browserify": "",
     "grunt-cli": "",
