--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "repo": "TheNodeILs/lodash-contrib",
     "version": "393.0.0",
     "dependencies": {
-        "lodash/lodash": "3.9.3"
+        "lodash": "3.9.3"
     },
     "main": "dist/lodash-contrib.js",
     "scripts": [
