--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "lodash-contrib",
   "description": "The brass buckles on lodash's utility belt",
-  "version": "31001.1.0",
+  "version": "43000.0.0.pre",
   "main": "dist/lodash-contrib.commonjs.js",
   "dependencies": {
-    "lodash": "3.10.1"
+    "lodash": "4.3.0"
   },
   "devDependencies": {
     "chai": "",
@@ -21,7 +21,7 @@
     "grunt-tocdoc": "",
     "mocha": ""
   },
-  "repository": "TheNodeILs/lodash-contrib",
+  "repository": "node4good/lodash-contrib",
   "license": "MIT",
   "author": "Refael Ackermann <me@refack.com> (http://refack.com)",
   "contributors": [
